Istio-ServiceMesh/gateways/default-pub-gw.yaml
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: public-gateway
  namespace: istio-ingress
spec:
  selector:
    app: public-gateway
    istio: public-gateway-ingressgateway
  servers:
    - hosts:
        - '*.homelab'
      port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: true
    - hosts:
        - '*.homelab'
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        credentialName: public-gateway-tls
        mode: SIMPLE
